--- a/cavs-algorhythms/package.json
+++ b/cavs-algorhythms/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typeface-poppins": "^1.1.13"
   },
   "engines": {
     "node": ">=18"
