--- a/cavs-algorhythms/package.json
+++ b/cavs-algorhythms/package.json
@@ -9,6 +9,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.16.0",
     "typeface-poppins": "^1.1.13"
   },
   "engines": {
